--- a/src/flow/netbeans/markdown/Bundle.properties
+++ b/src/flow/netbeans/markdown/Bundle.properties
@@ -5,4 +5,4 @@ OpenIDE-Module-Display-Category=Languages Support
 OpenIDE-Module-Name=Markdown File Support
 OpenIDE-Module-Short-Description=Markdown file support for the Netbeans IDE
 Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
-Templates/Other/MarkdownTemplate.md=Empty Markdown file
+Templates/Other/MarkdownTemplate.md=Markdown file
