--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -4,4 +4,4 @@ cluster.path=\
     ${nbplatform.active.dir}/php:\
     ${nbplatform.active.dir}/platform:\
     ${nbplatform.active.dir}/websvccommon
-nbplatform.active=nb721
+nbplatform.active=default
