Pegdown release 1.2.1 added as Markdown processor

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,12 @@
 file.reference.asm-3.3.1.jar=release/modules/ext/asm-3.3.1.jar
+file.reference.asm-analysis-3.3.1.jar=release/modules/ext/asm-analysis-3.3.1.jar
+file.reference.asm-tree-3.3.1.jar=release/modules/ext/asm-tree-3.3.1.jar
+file.reference.asm-util-3.3.1.jar=release/modules/ext/asm-util-3.3.1.jar
 file.reference.parboiled-core-1.0.2.jar=release/modules/ext/parboiled-core-1.0.2.jar
 file.reference.parboiled-java-1.0.2.jar=release/modules/ext/parboiled-java-1.0.2.jar
-file.reference.pegdown-1.1.0.jar=release/modules/ext/pegdown-1.1.0.jar
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
-javadoc.reference.pegdown-1.1.0.jar=ext/pegdown-1.1.0-javadoc.jar
 license.file=LICENSE
 nbm.homepage=https://github.com/madflow/flow-netbeans-markdown
 nbm.module.author=Florian Reiss
 nbm.needs.restart=true
-source.reference.pegdown-1.1.0.jar=ext/pegdown-1.1.0-sources.jar
