Issue #6 Version bump to the latest pegdown release and support for extensions via options menu

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,8 +2,10 @@ file.reference.asm-3.3.1.jar=release/modules/ext/asm-3.3.1.jar
 file.reference.asm-analysis-3.3.1.jar=release/modules/ext/asm-analysis-3.3.1.jar
 file.reference.asm-tree-3.3.1.jar=release/modules/ext/asm-tree-3.3.1.jar
 file.reference.asm-util-3.3.1.jar=release/modules/ext/asm-util-3.3.1.jar
-file.reference.parboiled-core-1.0.2.jar=release/modules/ext/parboiled-core-1.0.2.jar
 file.reference.parboiled-java-1.0.2.jar=release/modules/ext/parboiled-java-1.0.2.jar
+file.reference.pegdown-1.2.1-javadoc.jar=release/modules/ext/pegdown-1.2.1-javadoc.jar
+file.reference.pegdown-1.2.1-sources.jar=release/modules/ext/pegdown-1.2.1-sources.jar
+file.reference.pegdown-1.2.1.jar=release/modules/ext/pegdown-1.2.1.jar
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=LICENSE
