Implemented HTML template option for HTML export and preview.

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -22,3 +22,7 @@ MarkdownPanel.FENCED_CODE_BLOCKS.toolTipText=Fenced Code Blocks in the way of PH
 MarkdownPanel.HTML_BLOCK_SUPPRESSION.toolTipText=Suppresses the output of HTML blocks.
 MarkdownPanel.INLINE_HTML_SUPPRESSION.toolTipText=Suppresses the output of inline HTML elements.
 MarkdownPanel.WIKILINKS.toolTipText=Support [[Wiki-style links]] with a customizable URL rendering logic.
+MarkdownPanel.jLabel2.text=Template for HTML Export or Preview
+MarkdownPanel.jPanel2.TabConstraints.tabTitle=HTML Export
+MarkdownPanel.jPanel1.TabConstraints.tabTitle=Extensions
+MarkdownPanel.HTML_TEMPLATE.text=<html>\n<head>\n<meta http-equiv="content-type" content="text/html; charset=UTF-8"></head>\n<style type="text/css">\n<!--\n/* Your own CSS */\n-->\n</style>\n<body>\n{%CONTENT%}\n</body>\n</html>
