Still - Fix HTML Template

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -7,10 +7,9 @@ MarkdownPanel.QUOTES.text=QUOTES
 MarkdownPanel.ABBREVIATIONS.text=ABBREVIATIONS
 MarkdownPanel.HARDWRAPS.text=HARDWRAPS
 MarkdownPanel.AUTOLINKS.text=AUTOLINKS
-MarkdownPanel.TABLES.text=TABLES
+MarkdownPanel.TABLES.text=TABLE
 MarkdownPanel.DEFINITION_LISTS.text=DEFINITION LISTS
 MarkdownPanel.jCheckBox1.text=jCheckBox1
-MarkdownPanel.jLabel1.text=Enable one or more of the following extensions over standard Markdown
 MarkdownPanel.SMARTS.toolTipText=Beautifies apostrophes, ellipses ("..." and ". . .") and dashes ("--" and "---")
 MarkdownPanel.QUOTES.toolTipText=Beautifies single quotes, double quotes and double angle quotes (\u00ab and \u00bb)
 MarkdownPanel.ABBREVIATIONS.toolTipText=Abbreviations in the way of PHP Markdown Extra.
@@ -22,7 +21,8 @@ MarkdownPanel.FENCED_CODE_BLOCKS.toolTipText=Fenced Code Blocks in the way of PH
 MarkdownPanel.HTML_BLOCK_SUPPRESSION.toolTipText=Suppresses the output of HTML blocks.
 MarkdownPanel.INLINE_HTML_SUPPRESSION.toolTipText=Suppresses the output of inline HTML elements.
 MarkdownPanel.WIKILINKS.toolTipText=Support [[Wiki-style links]] with a customizable URL rendering logic.
-MarkdownPanel.jLabel2.text=Template for HTML Export or Preview
-MarkdownPanel.jPanel2.TabConstraints.tabTitle=HTML Export
-MarkdownPanel.jPanel1.TabConstraints.tabTitle=Extensions
 MarkdownPanel.HTML_TEMPLATE.text=<html>\n<head>\n<meta http-equiv="content-type" content="text/html; charset=UTF-8"></head>\n<style type="text/css">\n<!--\n/* Your own CSS */\n-->\n</style>\n<body>\n{%CONTENT%}\n</body>\n</html>
+MarkdownPanel.HTML_EXPORT_PANEL.TabConstraints.tabTitle=HTML Export
+MarkdownPanel.EXTENSIONS_PANEL.TabConstraints.tabTitle=Extensions
+MarkdownPanel.HTML_PANEL_HEADER.text=Template for HTML Export or Preview
+MarkdownPanel.EXTENSIONS_PANEL_HEADER.text=Enable one or more of the following extensions over standard Markdown
