--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -2,7 +2,7 @@ CTL_MarkdownAction=Markdown
 CTL_MarkdownTopComponent=Markdown Window
 HINT_MarkdownTopComponent=This is a Markdown window
 OpenIDE-Module-Display-Category=Languages Support
-OpenIDE-Module-Name=Markdown File Support
-OpenIDE-Module-Short-Description=Markdown file support for the Netbeans IDE
+OpenIDE-Module-Name=Markdown Support
+OpenIDE-Module-Short-Description=Markdown support for the NetBeans IDE
 Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
 Templates/Other/MarkdownTemplate.md=Markdown file
