Support for View Html on save

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -26,3 +26,5 @@ MarkdownPanel.HTML_EXPORT_PANEL.TabConstraints.tabTitle=HTML Export
 MarkdownPanel.EXTENSIONS_PANEL.TabConstraints.tabTitle=Extensions
 MarkdownPanel.HTML_PANEL_HEADER.text=Template for HTML Export or Preview
 MarkdownPanel.EXTENSIONS_PANEL_HEADER.text=Enable one or more of the following extensions over standard Markdown
+MarkdownPanel.ONSAVE_PANEL.TabConstraints.tabTitle=On Save
+MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html
