--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -6,3 +6,4 @@ OpenIDE-Module-Name=Markdown Support
 OpenIDE-Module-Short-Description=Markdown support for the NetBeans IDE
 Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
 Templates/Other/MarkdownTemplate.md=Markdown file
+Editors/text/x-markdown=Markdown
