Extended Markdown example file and registered it for use in the Fonts & Colors section of the NetBeans options window. Fixed references to localizing bundle in layer file and added missing entries to bundle.

--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -6,3 +6,32 @@ OpenIDE-Module-Name=Markdown Support
 OpenIDE-Module-Short-Description=Markdown support for the NetBeans IDE
 Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
 Templates/Other/MarkdownTemplate.md=Markdown file
+text/x-markdown=Markdown
+autolink=Autolink
+blockquote=Block Quote
+bulletlist=Bullet List
+code=Code
+definition=Definition
+definition_list=Definition List
+definition_term=Definition Term
+emph=Emphasized
+expimage=Inline Image
+explink=Inline Link
+header=Header
+horizontalrule=Horizontal Rule
+htmlblock=HTML Block
+inlinehtml=Inline HTML
+listitem=List Item
+maillink=Mail Link
+orderedlist=Ordered List
+plain=Plain Text
+quoted=Quoted
+ref_image=Reference Image
+ref_link=Reference Link
+reference=Reference
+strong=Strong
+table=Table
+text=Text
+verbatim=Verbatim
+whitespace=Whitespace
+wikilink=Wiki Link
