Added separate tokens for header levels 1 to 6. Added base types in Font & Color settings for links, images and headers.

--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -18,9 +18,17 @@ emph=Emphasized
 expimage=Inline Image
 explink=Inline Link
 header=Header
+header1=Header 1
+header2=Header 2
+header3=Header 3
+header4=Header 4
+header5=Header 5
+header6=Header 6
 horizontalrule=Horizontal Rule
 htmlblock=HTML Block
+image=Image
 inlinehtml=Inline HTML
+link=Link
 listitem=List Item
 maillink=Mail Link
 orderedlist=Ordered List
