--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -2,6 +2,9 @@ CTL_MarkdownAction=Markdown
 CTL_MarkdownTopComponent=Markdown Window
 HINT_MarkdownTopComponent=This is a Markdown window
 OpenIDE-Module-Display-Category=Languages Support
+OpenIDE-Module-Long-Description=\
+    This is an unofficial preview version. \
+    Please go to http://github.com/madflow/flow-netbeans-markdown/ for the official version.
 OpenIDE-Module-Name=Markdown Support
 OpenIDE-Module-Short-Description=Markdown support for the NetBeans IDE
 Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
