Prepared Development Release 1.4

--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -3,8 +3,9 @@ CTL_MarkdownTopComponent=Markdown Window
 HINT_MarkdownTopComponent=This is a Markdown window
 OpenIDE-Module-Display-Category=Languages Support
 OpenIDE-Module-Long-Description=\
-    This is an unofficial preview version. \
-    Please go to http://github.com/madflow/flow-netbeans-markdown/ for the official version.
+    A NetBeans IDE plugin which adds Markdown support. \
+    This plugin provides syntax highlighting, HTML preview and HTML export when editing a Markdown document.\n\n\
+    Please report issues and star the repository at:\n\nhttps://github.com/madflow/flow-netbeans-markdown
 OpenIDE-Module-Name=Markdown Support
 OpenIDE-Module-Short-Description=Markdown support for the NetBeans IDE
 Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
