--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 file.reference.asm-4.1.jar=release/modules/ext/asm-4.1.jar
 file.reference.asm-analysis-4.1.jar=release/modules/ext/asm-analysis-4.1.jar
 file.reference.asm-tree-4.1.jar=release/modules/ext/asm-tree-4.1.jar
