Suggest filename while genearting HTML Add option to save in same folder as markdown file by default

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -28,3 +28,5 @@ MarkdownPanel.HTML_PANEL_HEADER.text=Template for HTML Export or Preview
 MarkdownPanel.EXTENSIONS_PANEL_HEADER.text=Enable one or more of the following extensions over standard Markdown
 MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
 MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
+MarkdownPanel.SAVE_IN_SOURCE_DIR.text=View Html On Save
+MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
