--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,3 +11,4 @@ license.file=LICENSE
 nbm.homepage=https://github.com/madflow/flow-netbeans-markdown
 nbm.module.author=Florian Reiss
 nbm.needs.restart=true
+src-ext.cp.extra=${java.home}/lib/jfxrt.jar
