--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -30,3 +30,4 @@ MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
 MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=View Html On Save
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
+MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use embedded WebKit browser in Preview pane if available
