Ported JavaFX preview to NB8+JDK8.

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -30,5 +30,4 @@ MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
 MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=View Html On Save
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
-MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use JavaFX to display preview in editor if available
-MarkdownPanel.FX_HTML_VIEW_WARNING_TEXT.text=This is an experimental feature. If you enable it and use the embedded WebKit Browser - or any other plugin which uses JavaFX - the IDE will likely become unresponsive!
+MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use JavaFX to display preview in editor
