--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -30,3 +30,12 @@ MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
 MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=View Html On Save
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
+MarkdownPanel.TYPING_HOOKS.text_1=Auto operation for lists and quotes (+,*, -, 1., >)
+MarkdownPanel.REMOVE_EMPTY_LIST.text=remove empty list
+MarkdownPanel.AUTO_ADDITION_LIST.text=auto addition for lists and block quates operator
+MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.text_1=remove ordered list number
+MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.toolTipText=Number is also removed when white space is removed
+MarkdownPanel.REMOVE_EMPTY_LIST.toolTipText=If list is empty, it's removed when new line is inserted
+MarkdownPanel.AUTO_ADDITION_LIST.toolTipText=Add operators(*, -, +, >) when new line is inserted
+MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.toolTipText=Reorder ordered list number when number is added/removed
+MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.text=reorder ordered list number
