Fix indent problem

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -1,4 +1,5 @@
 cluster.path=\
+    ${nbplatform.active.dir}/harness:\
     ${nbplatform.active.dir}/ide:\
     ${nbplatform.active.dir}/nb:\
     ${nbplatform.active.dir}/php:\
