Fix typo and first word of labels
- quates -> quotes
- First word of labels is capitalized

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -31,11 +31,11 @@ MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=View Html On Save
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
 MarkdownPanel.TYPING_HOOKS.text_1=Auto operation for lists and quotes (+,*, -, 1., >)
-MarkdownPanel.REMOVE_EMPTY_LIST.text=remove empty list
-MarkdownPanel.AUTO_ADDITION_LIST.text=auto addition for lists and block quates operator
-MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.text_1=remove ordered list number
+MarkdownPanel.REMOVE_EMPTY_LIST.text=Remove empty list
+MarkdownPanel.AUTO_ADDITION_LIST.text=Auto addition for lists and block quotes operator
+MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.text_1=Remove ordered list number
 MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.toolTipText=Number is also removed when white space is removed
 MarkdownPanel.REMOVE_EMPTY_LIST.toolTipText=If list is empty, it's removed when new line is inserted
 MarkdownPanel.AUTO_ADDITION_LIST.toolTipText=Add operators(*, -, +, >) when new line is inserted
 MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.toolTipText=Reorder ordered list number when number is added/removed
-MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.text=reorder ordered list number
+MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.text=Reorder ordered list number
