--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,6 +9,6 @@ javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=LICENSE
 nbm.homepage=https://github.com/madflow/flow-netbeans-markdown
-nbm.module.author=Florian Reiss
+nbm.module.author=Florian Reiss, Holger Stenger, junichi1
 nbm.needs.restart=true
 src-ext.cp.extra=${java.home}/lib/jfxrt.jar
