--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -39,3 +39,5 @@ MarkdownPanel.AUTO_ADDITION_LIST.toolTipText=Add operators(*, -, +, >) when new 
 MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.toolTipText=Reorder ordered list number when number is added/removed
 MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.text=Reorder ordered list number
 MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use JavaFX to display preview in editor
+MarkdownPanel.STRIKETHROUGH.toolTipText=Support strikethroughs as supported in Pandoc and Github.
+MarkdownPanel.STRIKETHROUGH.text=STRIKETHROUGH
