--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,9 @@ file.reference.asm-4.1.jar=release/modules/ext/asm-4.1.jar
 file.reference.asm-analysis-4.1.jar=release/modules/ext/asm-analysis-4.1.jar
 file.reference.asm-tree-4.1.jar=release/modules/ext/asm-tree-4.1.jar
 file.reference.asm-util-4.1.jar=release/modules/ext/asm-util-4.1.jar
-file.reference.parboiled-core-1.1.5.jar=release/modules/ext/parboiled-core-1.1.5.jar
-file.reference.parboiled-java-1.1.5.jar=release/modules/ext/parboiled-java-1.1.5.jar
+file.reference.parboiled-core-1.1.6.jar=release/modules/ext/parboiled-core-1.1.6.jar
+file.reference.parboiled-java-1.1.6.jar=release/modules/ext/parboiled-java-1.1.6.jar
+file.reference.pegdown-1.4.2.jar=release/modules/ext/pegdown-1.4.2.jar
 javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=LICENSE
