Export to HTML on save
Resolves #52

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -26,18 +26,19 @@ MarkdownPanel.HTML_EXPORT_PANEL.TabConstraints.tabTitle=HTML Export
 MarkdownPanel.EXTENSIONS_PANEL.TabConstraints.tabTitle=Extensions
 MarkdownPanel.HTML_PANEL_HEADER.text=Template for HTML Export or Preview
 MarkdownPanel.EXTENSIONS_PANEL_HEADER.text=Enable one or more of the following extensions over standard Markdown
-MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
-MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
-MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
-MarkdownPanel.TYPING_HOOKS.text_1=Auto operation for lists and quotes (+,*, -, 1., >)
-MarkdownPanel.REMOVE_EMPTY_LIST.text=Remove empty list
-MarkdownPanel.AUTO_ADDITION_LIST.text=Auto addition for lists and block quotes operator
-MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.text_1=Remove ordered list number
-MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.toolTipText=Number is also removed when white space is removed
-MarkdownPanel.REMOVE_EMPTY_LIST.toolTipText=If list is empty, it's removed when new line is inserted
-MarkdownPanel.AUTO_ADDITION_LIST.toolTipText=Add operators(*, -, +, >) when new line is inserted
-MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.toolTipText=Reorder ordered list number when number is added/removed
-MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.text=Reorder ordered list number
-MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use JavaFX to display preview in editor
 MarkdownPanel.STRIKETHROUGH.toolTipText=Support strikethroughs as supported in Pandoc and Github.
 MarkdownPanel.STRIKETHROUGH.text=STRIKETHROUGH
+MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
+MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use JavaFX to display preview in editor
+MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.toolTipText=Number is also removed when white space is removed
+MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.text_1=Remove ordered list number
+MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.toolTipText=Reorder ordered list number when number is added/removed
+MarkdownPanel.REORDER_ORDERED_LIST_NUMBER.text=Reorder ordered list number
+MarkdownPanel.REMOVE_EMPTY_LIST.toolTipText=If list is empty, it's removed when new line is inserted
+MarkdownPanel.REMOVE_EMPTY_LIST.text=Remove empty list
+MarkdownPanel.AUTO_ADDITION_LIST.toolTipText=Add operators(*, -, +, >) when new line is inserted
+MarkdownPanel.AUTO_ADDITION_LIST.text=Auto addition for lists and block quotes operator
+MarkdownPanel.TYPING_HOOKS.text_1=Auto operation for lists and quotes (+,*, -, 1., >)
+MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
+MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
+MarkdownPanel.EXPORT_ON_SAVE.text_1=Export to HTML on save
