Add custom preview refresh interval options to plugin miscellaneous option tab

--- a/src/flow/netbeans/markdown/options/Bundle.properties
+++ b/src/flow/netbeans/markdown/options/Bundle.properties
@@ -28,7 +28,7 @@ MarkdownPanel.HTML_PANEL_HEADER.text=Template for HTML Export or Preview
 MarkdownPanel.EXTENSIONS_PANEL_HEADER.text=Enable one or more of the following extensions over standard Markdown
 MarkdownPanel.STRIKETHROUGH.toolTipText=Support strikethroughs as supported in Pandoc and Github.
 MarkdownPanel.STRIKETHROUGH.text=STRIKETHROUGH
-MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
+MarkdownPanel.EXPORT_ON_SAVE.text_1=Export to HTML on save
 MarkdownPanel.FX_HTML_VIEW_ENABLED.text=Use JavaFX to display preview in editor
 MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.toolTipText=Number is also removed when white space is removed
 MarkdownPanel.REMOVE_ORDERED_LIST_NUMBER.text_1=Remove ordered list number
@@ -41,4 +41,8 @@ MarkdownPanel.AUTO_ADDITION_LIST.text=Auto addition for lists and block quotes o
 MarkdownPanel.TYPING_HOOKS.text_1=Auto operation for lists and quotes (+,*, -, 1., >)
 MarkdownPanel.SAVE_IN_SOURCE_DIR.text=Save in same folder as markdown file
 MarkdownPanel.VIEW_HTML_ON_SAVE.text=View Html On Save
-MarkdownPanel.EXPORT_ON_SAVE.text_1=Export to HTML on save
+MarkdownPanel.MISC_PANEL.TabConstraints.tabTitle=Miscellaneous
+MarkdownPanel.USE_CUSTOM_PREVIEW_REFRESH_INTERVAL.text_1=Use custom preview refresh interval
+MarkdownPanel.CUSTOM_PREVIEW_REFRESH_INTERVAL_LBL.text=Preview refresh interval:
+MarkdownPanel.CUSTOM_PREVIEW_REFRESH_INTERVAL.toolTipText=Preview refresh interval, between 10 and 10,000 milliseconds (0.01 and 10.0 seconds)
+MarkdownPanel.CUSTOM_PREVIEW_REFRESH_INTERVAL_LBL_MS.text=ms
