--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,6 +10,8 @@ javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=LICENSE
 nbm.homepage=https://github.com/madflow/flow-netbeans-markdown
-nbm.module.author=Florian Reiss, Holger Stenger, junichi1, Rados\u0142aw Kowalewski, Robert Burkhead
+nbm.module.author=Florian Reiss, Holger Stenger, junichi11, Rados\u0142aw Kowalewski, Robert Burkhead
 nbm.needs.restart=true
 src-ext.cp.extra=${java.home}/lib/jfxrt.jar
+keystore=nbproject/private/keystore
+nbm_alias=flow.netbeans.markdown
