Fixed the font and color settings for Markdown.
Added abbreviation and anchor link entries in settings.
Added unit tests to check for missing entries in settings.

--- a/src/flow/netbeans/markdown/resources/Bundle.properties
+++ b/src/flow/netbeans/markdown/resources/Bundle.properties
@@ -12,7 +12,9 @@ Services/MIMEResolver/MarkdownResolver.xml=Markdown Files
 Templates/Other/MarkdownTemplate.md=Markdown file
 Editors/text/x-markdown=Markdown
 text/x-markdown=Markdown
+abbreviation=Abbreviation
 autolink=Autolink
+anchorlink=Anchor Link
 blockquote=Block Quote
 bulletlist=Bullet List
 code=Code
