--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,17 +1,19 @@
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+#
+#Sat Feb 13 17:00:08 CET 2016
+javac.source=1.7
+file.reference.parboiled-core-1.1.6.jar=release/modules/ext/parboiled-core-1.1.6.jar
+nbm.homepage=https\://github.com/madflow/flow-netbeans-markdown
+file.reference.pegdown-1.4.2.jar=release/modules/ext/pegdown-1.4.2.jar
+license.file=LICENSE
 file.reference.asm-4.1.jar=release/modules/ext/asm-4.1.jar
+nbm.needs.restart=true
+nbm.module.author=https\://github.com/madflow/flow-netbeans-markdown/Authors.md
 file.reference.asm-analysis-4.1.jar=release/modules/ext/asm-analysis-4.1.jar
+keystore=nbproject/private/netbeans-markdown
+file.reference.parboiled-java-1.1.6.jar=release/modules/ext/parboiled-java-1.1.6.jar
+src-ext.cp.extra=${java.home}/lib/jfxrt.jar
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+nbm_alias=netbeans-markdown
 file.reference.asm-tree-4.1.jar=release/modules/ext/asm-tree-4.1.jar
 file.reference.asm-util-4.1.jar=release/modules/ext/asm-util-4.1.jar
-file.reference.parboiled-core-1.1.6.jar=release/modules/ext/parboiled-core-1.1.6.jar
-file.reference.parboiled-java-1.1.6.jar=release/modules/ext/parboiled-java-1.1.6.jar
-file.reference.pegdown-1.4.2.jar=release/modules/ext/pegdown-1.4.2.jar
-javac.source=1.7
-javac.compilerargs=-Xlint -Xlint:-serial
-license.file=LICENSE
-nbm.homepage=https://github.com/madflow/flow-netbeans-markdown
-nbm.module.author=Florian Reiss, Holger Stenger, junichi11, Rados\u0142aw Kowalewski, Robert Burkhead
-nbm.needs.restart=true
-src-ext.cp.extra=${java.home}/lib/jfxrt.jar
-keystore=nbproject/private/keystore
-nbm_alias=flow.netbeans.markdown
+javac.compilerargs=-Xlint -Xlint\:-serial
