--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,12 +2,12 @@
 #Sat Feb 13 17:00:08 CET 2016
 javac.source=1.7
 file.reference.parboiled-core-1.1.6.jar=release/modules/ext/parboiled-core-1.1.6.jar
-nbm.homepage=https\://github.com/madflow/flow-netbeans-markdown
+nbm.homepage=https://github.com/madflow/flow-netbeans-markdown
 file.reference.pegdown-1.4.2.jar=release/modules/ext/pegdown-1.4.2.jar
 license.file=LICENSE
 file.reference.asm-4.1.jar=release/modules/ext/asm-4.1.jar
 nbm.needs.restart=true
-nbm.module.author=https\://github.com/madflow/flow-netbeans-markdown/Authors.md
+nbm.module.author=https://github.com/madflow/flow-netbeans-markdown/blob/nb8/Authors.md
 file.reference.asm-analysis-4.1.jar=release/modules/ext/asm-analysis-4.1.jar
 keystore=nbproject/private/netbeans-markdown
 file.reference.parboiled-java-1.1.6.jar=release/modules/ext/parboiled-java-1.1.6.jar
